resolved the navigation problem with login page

--- a/project/.streamlit/secrets.toml
+++ b/project/.streamlit/secrets.toml
@@ -4,5 +4,7 @@ toolbarMode = "viewer"
 [server]
 enableStaticServing = true
 
-
+[auth]
+password = "zeronet"
+hint = "Ask the team for the password"
 
